--- a/src/index.scss
+++ b/src/index.scss
@@ -18,9 +18,5 @@ h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: inherit;}
 
 body {
   background: rgba(142, 206, 241, 0.5);
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Roboto Condensed', sans-serif;
 }
