--- a/src/App.scss
+++ b/src/App.scss
@@ -79,3 +79,45 @@
     }
   }
 }
+
+
+@keyframes Loading-circle {
+  0% {
+    rotate: 0;
+  }
+  50% {
+    rotate: 180deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}
+
+.loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+    .element {
+      width: 400px;
+      height: 400px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+        animation-name: Loading-circle;
+        animation-duration: 2.2s;
+        animation-iteration-count: infinite;
+      }
+  }
+}
