--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,8 @@
         padding: 0 30px;
         flex: 0 1 33.333%;
 
+        margin-bottom: 50px;
+
         height: 530px;
 
         > div:first-child {
@@ -50,12 +52,11 @@
           }
         }
 
-        > div:last-child {
+        > div:nth-child(2) {
           height: 300px;
 
           display: flex;
           flex-direction: column;
-          justify-content: space-between;
 
           header {
             display: flex;
@@ -67,18 +68,22 @@
             }
           }
 
-          h2 {
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 29px;
-            color: #363636;
-          }
+          .content {
+            flex: 1 1 auto;
 
-          p {
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 150%;
-            color: #363636;
+            h2 {
+              font-weight: 400;
+              font-size: 24px;
+              line-height: 29px;
+              color: #363636;
+            }
+
+            p {
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 150%;
+              color: #363636;
+            }
           }
 
           button {
@@ -87,8 +92,30 @@
             font-size: 16px;
             line-height: 150%;
             color: #363636;
+            margin-bottom: 20px;
+          }
+          button:last-child {
+            margin-bottom: 0;
+          }
+          }
+
+        .modal {
+          z-index: 3;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.7);
+          color: white;
+          overflow: auto;
+
+          h2 {
+            margin-bottom: 20px;
           }
         }
+
+
       }
     }
   }
