--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,9 @@ h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: inherit;}
 
 /////////////////////
 
+$base-color: rgba(142, 206, 241, 0.5);
+
 body {
-  background: rgba(142, 206, 241, 0.5);
+  background: $base-color;
   font-family: 'Roboto Condensed', sans-serif;
 }
